--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
+    "@types/uuid": "^8.3.0",
     "ngx-extended-pdf-viewer": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
